# ChangeLog for x11-wm/i3
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/ChangeLog,v 1.63 2015/03/07 21:30:50 xarthisius Exp $

*i3-4.9.1 (07 Mar 2015)

  07 Mar 2015; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.9.1.ebuild,
  -i3-4.9.ebuild:
  Version bump, drop old

  01 Mar 2015; Kacper Kowalik <xarthisius@gentoo.org> i3-4.9.ebuild:
  Add explicit dependency on libxkbcommon. Fixes bug #541684 Thanks to dan724
  <dan724@gmail.com>

*i3-4.9 (28 Feb 2015)

  28 Feb 2015; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.9.ebuild,
  i3-9999.ebuild:
  Version bump, drop dependency on libX11

  15 Feb 2015; Ultrabug <ultrabug@gentoo.org> i3-9999.ebuild:
  i3 git repo moved to github

  23 Dec 2014; Kacper Kowalik <xarthisius@gentoo.org> -i3-4.6.ebuild,
  -i3-4.7.2-r1.ebuild, -i3-4.7.2.ebuild, -i3-4.7.ebuild:
  Drop old

  21 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> i3-4.8.ebuild:
  amd64/x86 stable wrt bug #521070

  24 Sep 2014; Markus Meier <maekke@gentoo.org> i3-4.8.ebuild:
  add ~arm, bug #521374

  25 Jun 2014; Kacper Kowalik <xarthisius@gentoo.org> i3-4.8.ebuild,
  i3-9999.ebuild:
  Add proper perl dependencies for additional tools like i3-save-tree and i3
  -dmenu-desktop. Fixes bug #514188 by zolar czakl <tractrix@gmail.com>

  16 Jun 2014; Julian Ospald <hasufell@gentoo.org> i3-9999.ebuild:
  Ensure proper version of yajl, use "next" branch

  15 Jun 2014; Kacper Kowalik <xarthisius@gentoo.org> i3-4.8.ebuild:
  Ensure proper version of yajl

*i3-4.8 (15 Jun 2014)

  15 Jun 2014; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.8.ebuild:
  Version bump

  10 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> i3-4.7.2.ebuild:
  x86 stable wrt bug #499098

  08 May 2014; Julian Ospald <hasufell@gentoo.org> i3-9999.ebuild:
  revert, no patches in live ebuilds

  08 May 2014; Jeroen Roovers <jer@gentoo.org> i3-9999.ebuild:
  Apply -parallel_make/-cflags patches here too.
