@@ -6,25 +6,25 @@ AUX i3-4.7.2-cflags.patch 529 SHA256 6cf35eebd73d0acd909e9b509e050125526cb621456
 AUX i3-4.7.2-parallel_make.patch 2381 SHA256 541590c752b591910f414a2b3128e4c008a79be4ee409fb5a63431fb4cfc5a04 SHA512 5d63763839834f30b77a40a009ef5097da46156ab5e2b69d3a36351e19c67ee8220aa1cc5533c7088b5f5d59ed3afee08cc77d6d1119155de74da17a3b5c6720 WHIRLPOOL 08f0c6a2da29cc517d29e1a947b9e922ddb1df3f0169b0c9b4d299e6490ae998d43ef5b9253c74b439504b8529332bce9dc49760c64219e4fd7c78aa46eedb36
 DIST i3-4.8.tar.bz2 939690 SHA256 502c34290f239780bb40352191f0500e8f35d2446eddb573c67c27873d6a1b6b SHA512 fd6f92da857246119f1ae710b6c5168128fa2da5eae8308550b1b9c75879f060cac8246897333f3d67e18de36828a11dd12b4ccee9bd6cd6ad32e2b44c50b43e WHIRLPOOL 6c6288cb66ffdbf225df0dfcdc4f540cd36d7c8333a9f9d9c363cb6580d6a7c1ca0deb227a8f46ac907f2afc6e4e46efc448a51f0764a167bb9639956beae4ef
 DIST i3-4.9.1.tar.bz2 939630 SHA256 b70deff027c7d05276c9646e53faeeeccdde706370b9b337a633bed85b16dc43 SHA512 7a8f71dd944faae426a2239b8bf12ea1cfc83a95c49fcb64ded8321ef302f3277af7d2ecd84d99cef47aba73e5a1091f94e37e9ed2af78c4722ffee507477c90 WHIRLPOOL 15cd2722beaeef642815edd44ff189ff0d003fefbff71c067b94a65dadb55cd15dd1a142a37499fa55cc80424dbdc74cb979c8998d740addcc492eaf025e467f
-EBUILD i3-4.8.ebuild 1545 SHA256 20dc1fb3eebee8ff6b6641ce6c4edc44f406fc81b9f245d9534486b66e5c1b9d SHA512 1f2e02a00a3405abb0ce489b8ecda3fb5aeec6188a5fa79a6c36e14ee6e90287c2f4cf82a2dabf3935cc926e3e23efd53596b1a3ee201461e2364744d57d16a5 WHIRLPOOL 62180176b522df07246d4bc2ecb48d4417e3a18b75f55c8e8f5d6dc2c64192130f28d7f8deb97b10a28cb2063bac2cfad61b28b23c4a89428b074589e15ef269
-EBUILD i3-4.9.1.ebuild 1558 SHA256 8e7dcb83a66062f2a479829497d1e96adea6ac765ff4d4195adade0198f2e4a6 SHA512 914b2eeb38062b19f481b8e67bd4dfc2304b71513000f70eeb4809bbab2074fffb0d7040e04a9665ffc60ddac01cbdbf1b0d06617abfc22b0ef5edea73576712 WHIRLPOOL bc47e4332298c7d45f2965d687cf43d47de4166db6400ba2fc3cfb749d6cc1dcfe86065e196884959453b3185ed04c5364d6258f6c7b2c2f64e6e71c79d3e671
-EBUILD i3-9999.ebuild 1545 SHA256 a1277b201c6ae16c98d3f18d785201b85e90bcbab9c6f54b2ea8fb2b7ee907c5 SHA512 f6956aa14b801d9087781883fb695c7d9523bbf8b6ad8a86a9cfd1577073edac60f499cda65b8255da41880e229ff1ddbd5daecd03f5bf25aa362036de35c862 WHIRLPOOL 2abd01df0a2f77b59669d667d8af90356132d464b89a8b06ab5d31100fad1a0ff9694b0dd57b3b2a9bba183d2fc764b75d07593e19dc3c94056234c75d0a3ebe
-MISC ChangeLog 9216 SHA256 06959f6977ea8c945890853bb0501b3f99435455998cd8b296c473b755d65958 SHA512 5e027857043b813add5be3c4b08553e3e36729f61a18721c445f15b9c6666f03c504d60ec96cb6ad7909dd054fd602aa4083eb76e1d3c803f15a66ac8c33379a WHIRLPOOL 1dd7dff53586e7f914ba8611aea3f273a98b4fc05038e77e9218f9d72eed1aad5117346bb5aba755de51147eaee2189a7d110c88767bb6b352b06056b9f5efc8
+EBUILD i3-4.8.ebuild 1553 SHA256 5a535e95b26e670e103a3ad16c6698d0241ba8dafeb21c56de3daf63ad50af79 SHA512 d94d7af84f32b5fc43f7227b9897421b56ce9ecda06c2c29e6ba9f47e334893e9e9af61e0591139adb02dfbfbfce66e2aa5f40951c191c08ebf4b389a8d18b74 WHIRLPOOL e86b97ad9505e4ee552ef0eda968b293a244f7da9076182b8ea24457c21450e5157a2fa2929696a59f3f09a6268ad621fa8b2f6054e5067ccb84676eb643248b
+EBUILD i3-4.9.1.ebuild 1563 SHA256 0db552adf895d77aeff3d989277422553e0b64d8a3fcd4a7ecb6f728d02f3c3e SHA512 d57edf8b90ac1d4a7ea9bda3b33be76997ac2c79834dbb31cd20bc7ac5f8cef1f0d593d71772a3238456d73b95a1cafcd2dd8ee24eb02b4278815f29008b78a6 WHIRLPOOL 1ab603aaf5b2a77b1219ca359fd7afacdb85fceba19ad60edfa4cb95127a754df42f130f43e1ab6a0aeaf858432623e6cfb4d6845ec54c204ed0f05d0af2068f
+EBUILD i3-9999.ebuild 1550 SHA256 5f4161c1f681683f55fe93226d6b064ffbc8f48fcb5e0b0334e003b800e82f2a SHA512 7320de7e588e52ec2c8edc93fb2963cc20a3b8ebc89c5fdccf92ccf415be4a20c28dfdce828b5898a04377b62afe49feb18c9c1bc3f149917a1c83dd60729a36 WHIRLPOOL 6713d254dcb9e40cfc2db3052c9aee0c99b8deb88cb3a2f48a32967b2b75153ca96afc59d554490d3168ea958e11391810c90301b18953cd30c2f8e64e3deda4
+MISC ChangeLog 9424 SHA256 d7f1aadced312198d3cc832b492b2b30c1cb6a268bd85f7c2ba4ed5ade21c171 SHA512 fe378323f11ee351f23678e062085922cc4f6fced6287c17b3984bbdf45442fb7c56bbf70007347401c8dbf44e14287a15209fcb417c0ab383a30f3856cac93e WHIRLPOOL 387e1e4bf1355a5ea5b7d1272afe99eb52db65b496ea6f4868c56d0761aea5d1bd86ea6163f6ad7a2026c3ab89603e382d7257f84e941f79c3e88763ee557b53
 MISC metadata.xml 578 SHA256 747cbbd11d56e581ae8e58210207070fee2a663d7f029b260a5e5f1a69fb05ad SHA512 b8afbb2ec3fa72b688c19935ea9c28b43fdd4569a25ec3a91d04a211ccffd1cb661a03adf810b6c0fa054505bcd8086db60764bafd721411eb81f287b19e7514 WHIRLPOOL 6802ac798ca27a7cb073522c5e0c883459865cb63110f575a7d2ba2db0b13feb36d1102ff86a75e04c16bb740911d39b67d4da9b13c6683e051f8a8f3b44fa68
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU+24PAAoJEF0huFKJUZL5i0QP/1anfLELHgTi4aS6GqOMYuRY
-RCXKiOtj1G7SMAytM3rbotc/ccx1uefESahfwfHVOygTA64lnao8WW8pjZdDmx23
-IE+6bbqWwSOSJzPq1KmQbBQANATV69avQdOpIZAdYzYXZV9J0zUEYEer4aEJ/uwv
-ocmraclzdIVwYnpPKF+rrsjYFDN9F9clFcdx84VgDWIfxGUU9IhyGH7H6AETjE0R
-43+6Hal9y05P+zkTZh10nxs9Nas0NBJsgKWl90eKxgfyR4iJo8+kxN2Ofq9m8+7L
-BJ2qkyZiFmDicGUqQ3t0K3k51b+dNdeC2J1SEIxFu0s1gYT6OrlUWad5kya/8DlM
-Y1BGlNCF5+8d+ZIirKC0WTQUX5sp4mL59PDyjq2Ql3iPl4E0I5RsZvfABSslAW+0
-mzHkZkY17kZIyW3K+jtIZDb03IWNsu65On75ppYQA1RAEFBA3BYWmicWNPXUEaGS
-365lClPUE898ET+bMq/tqGVe8oORg2g8Fuz4FCT9er06wmhKhWaAmMuQG1+p2CNg
-TgPDMpu7nzCom8MeiaAsV8rOJQHuknMlCkLG7uy5O0PK4fMuwXqUnbMmk7mwBP3U
-qILxNQFBFxV6j3C132CPZS/3ts93FYP7FLXmPsLxSERFEJyk4Y1M+DJgiQFiIj7t
-mGk8NaNjj+LL/durdCOH
-=qdGH
+iQIcBAEBCAAGBQJVEKddAAoJEF0huFKJUZL5xCkP/2qYTxuCVJOrTFlvxE+7q4ZL
+oTGJw0VVm5trivPVKnKcgDwYMQpfz2gHbRalK2QnAm+lqFH4/K+VNS3/9d8A1f+K
+qQfpQ/ZkbM6FUNOPXxKbFb1eWe2g2u/6/pQVk/+lH3zXXxcac1szvA2Eo2sh9+0z
+GOFiPrjC4RweOigFKNS3zHq+QyundC7H7Z7sWq5/y85inZVJhtd/MJpCu8XV9qK0
+c+4V5fa/IY+pO3Z/CnIWdOOjAwCZXKBq2o/QL9mZ1FkTFeeSlXnDx1ovXYHlYhjH
+RAq4Vp7EJrdUtYPyG6en32watIpawdUycHnA23hsceW+8K1AC9/fuHSa4iY71+pB
+xAfGRh468k6rEvJCBnVO7O/vZI6IZpxi8YpxWEdsTLCdAPsGFT1FRuocsMeYskCN
+2aJzKQ3YQa4+RUTiMaxNv+6roMib1slAyDmapJSdSFsEGMk8oV1GQHQesuWEJ6ce
+2wl4PVwYBEt7Y6PGxBLi7pogbx28QF05D7SEQTEypFfQWAltzBo/RFX9hOFti+pV
+qMhS4KTLGMN5+WLY/vwJYGHWkyf3U4emTDsxWDrJwaZtTq+Gxf2pppYpZbSHbXjd
+WpFMtJHxfrYgRZ8rcWNp0y+JAtPPQBtKCQw6yFDboOvuYVHXgwwgNEzmcdT04h4F
+l8Cdexnepnbxh5WN1hsC
+=nVoJ
 -----END PGP SIGNATURE-----
