@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/i3-9999.ebuild,v 1.7 2015/02/28 21:24:00 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/i3-9999.ebuild,v 1.8 2015/03/23 23:52:57 xarthisius Exp $
 
 EAPI=5
 
@@ -21,7 +21,7 @@ CDEPEND="dev-lang/perl
 	dev-libs/libev
 	dev-libs/libpcre
 	>=dev-libs/yajl-2.0.3
-	x11-libs/libxcb
+	x11-libs/libxcb[xkb]
 	x11-libs/startup-notification
 	x11-libs/xcb-util
 	x11-libs/xcb-util-cursor
